# rust-ios-android-example

./: Cargo.toml  README.md  build.bak  build.rs  local.properties  run-on-adroid.sh
.cargo/: config
MobileApp/: Rust-Bridging-Header.h  build-rust-xcode.sh
MobileApp/MobileApp/: AppDelegate.swift  ViewController.swift
MobileApp/MobileApp.xcodeproj/: project.pbxproj
MobileApp/MobileApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MobileApp/MobileApp.xcodeproj/project.xcworkspace/xcuserdata/terhechte.xcuserdatad/: UserInterfaceState.xcuserstate
MobileApp/MobileApp.xcodeproj/xcuserdata/terhechte.xcuserdatad/xcschemes/: xcschememanagement.plist
MobileApp/MobileApp/Base.lproj/: Main.storyboard
app/: build.gradle
app/src/androidTest/java/me/appventure/mobileapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/me/appventure/mobileapp/: MainActivity.java  MobileApp.java  Worker.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/test/java/me/appventure/mobileapp/: ExampleUnitTest.java
src/: cascade.rs  ios_c_headers.rs  java_glue.rs  java_glue.rs.in  lib.rs  worker.rs
